--- a/teste_de_risco.html
+++ b/teste_de_risco.html
@@ -59,11 +59,11 @@
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q1" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q1" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
-                                <p class="font-semibold text-lg text-gray-800 mb-2">2. Seu parceiro tem uma arma?</p>
+                                <p class="font-semibold text-lg text-gray-800 mb-2">2. Ele possui arma de fogo?</p>
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q2" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q2" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                              <div>
-                                <p class="font-semibold text-lg text-gray-800 mb-2">3. Você o deixou depois de morarem juntos no último ano?</p>
+                                <p class="font-semibold text-lg text-gray-800 mb-2">3. Você o deixou após terem morado juntos no último ano?</p>
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q3" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q3" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
@@ -71,15 +71,15 @@
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q4" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q4" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
-                                <p class="font-semibold text-lg text-gray-800 mb-2">5. Ele já usou uma arma contra você ou a ameaçou com uma arma letal?</p>
+                                <p class="font-semibold text-lg text-gray-800 mb-2">5. Já usou uma arma potencialmente letal contra você ou ameaçou com arma letal?</p>
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q5" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q5" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
-                                <p class="font-semibold text-lg text-gray-800 mb-2">6. Ele a ameaça de matar você?</p>
+                                <p class="font-semibold text-lg text-gray-800 mb-2">6. Ele ameaça te matar?</p>
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q6" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q6" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
-                                <p class="font-semibold text-lg text-gray-800 mb-2">7. Ele já evitou ser preso por violência doméstica?</p>
+                                <p class="font-semibold text-lg text-gray-800 mb-2">7. Ele evitou ser preso por violência doméstica?</p>
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q7" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q7" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
@@ -87,11 +87,11 @@
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q8" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q8" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
-                                <p class="font-semibold text-lg text-gray-800 mb-2">9. Ele já forçou você a fazer sexo quando você não desejava?</p>
+                                <p class="font-semibold text-lg text-gray-800 mb-2">9. Ele já a forçou a ter relações sexuais quando você não queria?</p>
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q9" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q9" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
-                                <p class="font-semibold text-lg text-gray-800 mb-2">10. Ele já tentou sufocá-la?</p>
+                                <p class="font-semibold text-lg text-gray-800 mb-2">10. Ele tenta te estrangular/sufocar?</p>
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q10" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q10" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
@@ -99,11 +99,11 @@
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q11" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q11" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
-                                <p class="font-semibold text-lg text-gray-800 mb-2">12. Ele é alcoólatra ou tem problemas com bebida?</p>
+                                <p class="font-semibold text-lg text-gray-800 mb-2">12. Ele é alcoólatra ou bebedor problemático?</p>
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q12" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q12" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
-                                <p class="font-semibold text-lg text-gray-800 mb-2">13. Ele controla a maioria ou todas as suas atividades diárias?</p>
+                                <p class="font-semibold text-lg text-gray-800 mb-2">13. Ele controla a maior parte das suas atividades diárias?</p>
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q13" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q13" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
@@ -111,23 +111,23 @@
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q14" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q14" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
-                                <p class="font-semibold text-lg text-gray-800 mb-2">15. Ele já a agrediu enquanto você estava grávida?</p>
+                                <p class="font-semibold text-lg text-gray-800 mb-2">15. Você já foi agredida por ele durante a gravidez?</p>
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q15" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q15" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
-                                <p class="font-semibold text-lg text-gray-800 mb-2">16. Ele já a ameaçou ou tentou cometer suicídio?</p>
+                                <p class="font-semibold text-lg text-gray-800 mb-2">16. Ele já ameaçou ou tentou cometer suicídio?</p>
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q16" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q16" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
-                                <p class="font-semibold text-lg text-gray-800 mb-2">17. Ele ameaça machucar seus filhos?</p>
+                                <p class="font-semibold text-lg text-gray-800 mb-2">17. Ele ameaça ferir seus filhos?</p>
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q17" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q17" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
-                                <p class="font-semibold text-lg text-gray-800 mb-2">18. Você acredita que ele é capaz de matar você?</p>
+                                <p class="font-semibold text-lg text-gray-800 mb-2">18. Você tem medo de que ele possa te matar?</p>
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q18" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q18" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
-                                <p class="font-semibold text-lg text-gray-800 mb-2">19. Ele a persegue ou espiona?</p>
+                                <p class="font-semibold text-lg text-gray-800 mb-2">19. Ele te persegue, espiona ou deixa mensagens ameaçadoras?</p>
                                 <div class="flex space-x-6"><label class="inline-flex items-center"><input type="radio" name="q19" value="sim" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Sim</span></label><label class="inline-flex items-center"><input type="radio" name="q19" value="nao" class="form-radio text-[#8a2be2]"><span class="ml-2 text-gray-700">Não</span></label></div>
                             </div>
                             <div>
@@ -145,8 +145,9 @@
 
                     <!-- Área de Resultado (inicialmente oculta) -->
                     <div id="resultArea" class="hidden mt-10 text-center">
-                        <h3 id="resultTitle" class="text-2xl font-bold"></h3>
-                        <p id="resultText" class="mt-4 text-lg"></p>
+                        <h3 id="resultTitle" class="text-3xl font-bold"></h3>
+                        <p class="mt-2 text-xl font-semibold">Sua pontuação: <span id="scoreValue"></span></p>
+                        <p id="resultText" class="mt-4 text-lg bg-white/50 p-6 rounded-lg"></p>
                     </div>
                 </div>
             </div>
@@ -165,35 +166,57 @@
         </div>
     </footer>
 
-    <!-- Scripts -->
+    <!-- Scripts com Lógica de Pesos Atualizada -->
     <script>
         $(document).ready(function() {
             $('#riskAssessmentForm').submit(function(e) {
-                e.preventDefault(); // Impede o envio padrão do formulário
+                e.preventDefault(); 
 
                 let score = 0;
-                // Calcula a pontuação somando 1 para cada "sim"
-                $("#riskAssessmentForm input[type='radio'][value='sim']:checked").each(function() {
-                    score++;
-                });
+                // Define os pesos extras para cada pergunta. O valor aqui é o que será SOMADO ao ponto base.
+                const weights = {
+                    'q2': 4, 'q3': 4, 'q4': 3,
+                    'q5': 2, 'q6': 2, 'q7': 2,
+                    'q8': 1, 'q9': 1
+                };
+
+                // Itera sobre todas as perguntas para calcular a pontuação
+                for (let i = 1; i <= 20; i++) {
+                    const questionName = 'q' + i;
+                    // Verifica se a resposta "sim" para a pergunta atual está marcada
+                    if ($(`input[name="${questionName}"][value="sim"]`).is(':checked')) {
+                        // Adiciona o ponto base para cada "sim"
+                        score += 1;
+                        
+                        // Se a pergunta tiver um peso extra, adiciona esse peso à pontuação
+                        if (weights[questionName]) {
+                            score += weights[questionName];
+                        }
+                    }
+                }
 
                 let resultTitle = $('#resultTitle');
                 let resultText = $('#resultText');
                 let resultArea = $('#resultArea');
+                
+                $('#scoreValue').text(score); // Mostra a pontuação final
 
-                // Remove classes de cor anteriores para garantir que a nova cor seja aplicada
-                resultTitle.removeClass('text-green-600 text-yellow-600 text-red-600');
+                // Remove classes de cor anteriores
+                resultTitle.removeClass('text-green-600 text-yellow-600 text-orange-600 text-red-600');
 
-                // Define o resultado com base na pontuação
-                if (score <= 5) {
-                    resultTitle.text('Risco Baixo').addClass('text-green-600');
-                    resultText.html('Seu resultado indica um <strong>risco baixo</strong>. No entanto, é crucial permanecer vigilante. Qualquer forma de violência é inaceitável. Continue se informando e conhecendo seus direitos. Se algo mudar, não hesite em procurar ajuda.');
-                } else if (score <= 12) {
+                // Define o resultado com base nas novas faixas de pontuação
+                if (score <= 7) {
+                    resultTitle.text('Risco Variável').addClass('text-green-600');
+                    resultText.html('Seu resultado indica um <strong>risco variável</strong>. É crucial permanecer vigilante, pois qualquer forma de violência é inaceitável. Continue se informando e conhecendo seus direitos. Se algo mudar, não hesite em procurar a rede de apoio.');
+                } else if (score <= 13) {
                     resultTitle.text('Risco Aumentado').addClass('text-yellow-600');
-                    resultText.html('Seu resultado indica um <strong>risco aumentado</strong>. Existem sinais de alerta importantes em seu relacionamento que não devem ser ignorados. Considere conversar com alguém de confiança e procurar uma rede de apoio. Ligue para o <strong>180</strong> para orientação.');
-                } else {
-                    resultTitle.text('Risco Elevado').addClass('text-red-600');
-                    resultText.html('<strong>Alerta!</strong> Seu resultado indica um <strong>risco elevado</strong>. Sua segurança pode estar em perigo. É fundamental que você procure ajuda profissional imediatamente. <br><strong>Ligue para o 180 (Central de Atendimento à Mulher) ou 190 (Polícia Militar) em caso de emergência.</strong> Você não está sozinha.');
+                    resultText.html('Seu resultado indica um <strong>risco aumentado</strong>. Existem sinais de alerta importantes que não devem ser ignorados. Considere conversar com alguém de confiança e procurar uma rede de apoio. Ligue para o <strong>180</strong> para orientação.');
+                } else if (score <= 17) {
+                    resultTitle.text('Risco Grave').addClass('text-orange-600');
+                    resultText.html('<strong>Atenção!</strong> Seu resultado indica um <strong>risco grave</strong>. A situação é séria e é muito importante que você procure ajuda especializada. Sua segurança deve ser a prioridade. <br><strong>Ligue para o 180 (Central de Atendimento à Mulher) ou procure uma Delegacia da Mulher (DEAM).</strong>');
+                } else { // Pontuação 18 ou mais
+                    resultTitle.text('Risco Extremo').addClass('text-red-600');
+                    resultText.html('<strong>PERIGO!</strong> Seu resultado indica um <strong>risco extremo</strong>. Sua segurança e sua vida podem estar em perigo. É fundamental que você procure ajuda profissional imediatamente. <br><strong>Ligue para o 190 (Polícia Militar) em caso de emergência ou para o 180 (Central de Atendimento à Mulher).</strong> Você não está sozinha.');
                 }
 
                 // Exibe a área de resultado
