--- a/teste_de_risco.html
+++ b/teste_de_risco.html
@@ -21,12 +21,12 @@
         <img src="https://placehold.co/200x50/8a2be2/ffffff?text=Vozes+Femininas" alt="Logo do projeto" class="h-10" />
       </a>
       <nav class="hidden md:flex space-x-6">
-        <a href="#" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Home</a>
-        <a href="#" class="text-gray-600 hover:text-[#8a2be2] transition-colors">O que é?</a>
-        <a href="#" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Ajuda</a>
-        <a href="#" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Leis</a>
-        <a href="#teste-risco" class="text-[#8a2be2] font-semibold transition-colors">Teste de Risco</a>
-        <a href="#" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Contato</a>
+        <a href="index.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Home</a>
+        <a href="o_que_e.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">O que é?</a>
+        <a href="ajuda.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Ajuda</a>
+        <a href="leis.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Leis</a>
+        <a href="teste_de_risco.html" class="text-[#8a2be2] font-semibold transition-colors">Teste de Risco</a>
+        <a href="contato.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Contato</a>
       </nav>
       <button class="md:hidden text-gray-600 focus:outline-none" aria-label="Abrir menu">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/></svg>
