--- a/leis.html
+++ b/leis.html
@@ -5,36 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leis de Proteção - Vozes Femininas</title>
     <!-- Adiciona a fonte Inter e o Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f7f7f7;
-            color: #333;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
-<body class="antialiased">
+<body>
     <!-- Header -->
-    <header class="bg-white shadow-sm p-4 md:p-6">
-        <div class="container mx-auto flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold text-[#8a2be2]">
-                <img src="https://placehold.co/200x50/8a2be2/ffffff?text=Vozes+Femininas" alt="Logo do projeto" class="h-10">
+    <header>
+        <div class="container header-content">
+            <a href="index.html" class="logo">
+                <img src="https://placehold.co/200x50/8a2be2/ffffff?text=Vozes+Femininas" alt="Logo do projeto">
             </a>
-            <nav class="hidden md:flex space-x-6">
-                <a href="index.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Home</a>
-                <a href="o_que_e.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">O que é?</a>
-                <a href="ajuda.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Ajuda</a>
-                <a href="leis.html" class="text-[#8a2be2] font-semibold transition-colors">Leis</a>
-                <a href="teste_de_risco.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Teste de Risco</a>
-                <a href="contato.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Contato</a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="o_que_e.html">O que é?</a>
+                <a href="ajuda.html">Ajuda</a>
+                <a href="leis.html" class="active">Leis</a>
+                <a href="teste_de_risco.html">Teste de Risco</a>
+                <a href="contato.html">Contato</a>
             </nav>
-            <button class="md:hidden text-gray-600 focus:outline-none">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-                </svg>
-            </button>
         </div>
     </header>
 
@@ -98,16 +87,18 @@
         </section>
     </main>
 
+    
     <!-- Footer -->
-    <footer class="bg-[#4a248f] text-white py-8">
-        <div class="container mx-auto px-4 text-center">
+    <footer>
+        <div class="container text-center">
             <p>&copy; 2024 Vozes Femininas. Todos os direitos reservados.</p>
-            <div class="flex justify-center space-x-4 mt-4">
-                <a href="#" class="text-white hover:text-gray-300">Facebook</a>
-                <a href="#" class="text-white hover:text-gray-300">Instagram</a>
-                <a href="#" class="text-white hover:text-gray-300">X (Twitter)</a>
+            <div class="flex flex-center">
+                <a href="#">Facebook</a>
+                <a href="#">Instagram</a>
+                <a href="#">X (Twitter)</a>
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
