--- a/teste_de_risco.html
+++ b/teste_de_risco.html
@@ -4,35 +4,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Teste de Risco - Vozes Femininas</title>
-  <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <style>
-    body{font-family:'Inter',sans-serif;background:#f7f7f7;color:#333}
-    .badge{display:inline-flex;align-items:center;gap:.5rem}
-    .kbd{font-variant-numeric:tabular-nums}
-  </style>
 </head>
-<body class="antialiased">
+<body>
   <!-- Header -->
-  <header class="bg-white shadow-sm p-4 md:p-6">
-    <div class="container mx-auto flex justify-between items-center">
-      <a href="#" class="text-2xl font-bold text-[#8a2be2] flex items-center gap-2">
-        <img src="https://placehold.co/200x50/8a2be2/ffffff?text=Vozes+Femininas" alt="Logo do projeto" class="h-10" />
-      </a>
-      <nav class="hidden md:flex space-x-6">
-        <a href="index.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Home</a>
-        <a href="o_que_e.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">O que é?</a>
-        <a href="ajuda.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Ajuda</a>
-        <a href="leis.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Leis</a>
-        <a href="teste_de_risco.html" class="text-[#8a2be2] font-semibold transition-colors">Teste de Risco</a>
-        <a href="contato.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Contato</a>
-      </nav>
-      <button class="md:hidden text-gray-600 focus:outline-none" aria-label="Abrir menu">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/></svg>
-      </button>
-    </div>
-  </header>
+    <!-- Header -->
+    <header>
+        <div class="container header-content">
+            <a href="index.html" class="logo">
+                <img src="https://placehold.co/200x50/8a2be2/ffffff?text=Vozes+Femininas" alt="Logo do projeto">
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="o_que_e.html">O que é?</a>
+                <a href="ajuda.html">Ajuda</a>
+                <a href="leis.html">Leis</a>
+                <a href="teste_de_risco.html" class="active">Teste de Risco</a>
+                <a href="contato.html">Contato</a>
+            </nav>
+        </div>
+    </header>
 
   <main>
     <section id="teste-risco" class="py-16 md:py-24 bg-white">
@@ -91,145 +83,18 @@
     </section>
   </main>
 
-  <footer class="bg-[#4a248f] text-white py-8">
-    <div class="container mx-auto px-4 text-center">
-      <p>&copy; 2024 Vozes Femininas. Todos os direitos reservados.</p>
-      <div class="flex justify-center space-x-4 mt-4">
-        <a href="#" class="text-white/90 hover:text-white">Facebook</a>
-        <a href="#" class="text-white/90 hover:text-white">Instagram</a>
-        <a href="#" class="text-white/90 hover:text-white">X (Twitter)</a>
-      </div>
-    </div>
-  </footer>
 
-  <script>
-  // --- Perguntas 1..20 (sem 3A aqui) ---
-  const perguntas = [
-    '1. A violência física aumentou em gravidade ou frequência no último ano?',
-    '2. Ele possui arma de fogo?',
-    '3. Você o deixou após terem morado juntos no último ano?',
-    '4. Ele está desempregado?',
-    '5. Já usou uma arma potencialmente letal contra você ou ameaçou com arma letal?',
-    '6. Ele ameaça te matar?',
-    '7. Ele evitou ser preso por violência doméstica?',
-    '8. Você tem um filho que não é dele?',
-    '9. Ele já a forçou a ter relações sexuais quando você não queria?',
-    '10. Ele tenta te estrangular/sufocar?',
-    '11. Ele usa drogas ilegais?',
-    '12. Ele é alcoólatra ou bebedor problemático?',
-    '13. Ele controla a maior parte das suas atividades diárias?',
-    '14. Ele é violentamente e constantemente ciumento?',
-    '15. Você já foi agredida por ele durante a gravidez?',
-    '16. Ele já ameaçou ou tentou cometer suicídio?',
-    '17. Ele ameaça ferir seus filhos?',
-    '18. Você tem medo de que ele possa te matar?',
-    '19. Ele te persegue, espiona ou deixa mensagens ameaçadoras?',
-    '20. Você já ameaçou ou tentou cometer suicídio?'
-  ];
-
-  // Pesos EXTRAS validados neste projeto (soma máx total = 34)
-  // Base: cada "Sim" (Q1..Q20) = 1 ponto
-  // Extras: Q2 +4, Q3 +4, Q4 +3, Q5 +2, Q6 +2, Q7 +2, Q8 +1, Q9 +1
-  // Regra especial: 3A (checkbox) = -3 e desabilita Q3
-  const pesosExtras = { q2:4, q3:4, q4:3, q5:2, q6:2, q7:2, q8:1, q9:1 };
-  const MAXIMO = 34; // normalizado
-
-  // Renderiza perguntas
-  const cont = document.getElementById('listaPerguntas');
-  const tpl = document.getElementById('tplPergunta');
-  perguntas.forEach((texto,i)=>{
-    const n = i+1;
-    const clone = tpl.content.cloneNode(true);
-    const root = clone.querySelector('.item');
-    const p = clone.querySelector('.pergunta');
-    p.textContent = texto;
-    const radios = clone.querySelectorAll('input[type="radio"]');
-    radios.forEach(r=>{ r.setAttribute('name','q'+n); });
-    cont.appendChild(clone);
-  });
-
-  // 3A desativa Q3
-  const q3a = document.getElementById('q3a');
-  q3a.addEventListener('change',()=>{
-    const radiosQ3 = document.querySelectorAll('input[name="q3"]');
-    if(q3a.checked){
-      radiosQ3.forEach(r=>{ r.checked=false; r.disabled=true; });
-    } else {
-      radiosQ3.forEach(r=>{ r.disabled=false; });
-    }
-  });
-
-  // Modal/tooltip simples dos pesos
-  document.getElementById('btnPesos').addEventListener('click',()=>{
-    const linhas = [
-      'Peso base: cada "Sim" nas Q1..Q20 = 1 ponto (3A não pontua).',
-      'Pesos extras: Q2(+4), Q3(+4), Q4(+3), Q5(+2), Q6(+2), Q7(+2), Q8(+1), Q9(+1).',
-      'Regra especial: marcar 3A aplica -3 (e torna Q3 incompatível).',
-      'Máximo da escala: 34.'
-    ];
-    alert(linhas.join('\n'));
-  });
-
-  // Cálculo
-  $('#riskAssessmentForm').on('submit', function(e){
-    e.preventDefault();
-
-    let scoreBase = 0;    // soma de 1 ponto por "Sim"
-    let scoreExtras = 0;  // pesos extras
-    let debug = [];
-
-    for(let i=1;i<=20;i++){
-      const name = 'q'+i;
-      const yes = $(`input[name="${name}"][value="sim"]`).is(':checked');
-      if(yes){
-        scoreBase += 1; // ponto base
-        if(pesosExtras[name]) scoreExtras += pesosExtras[name];
-      }
-    }
-
-    // 3A: -3 e desabilita Q3 (já tratado no UI)
-    if(q3a.checked){ scoreExtras -= 3; debug.push('3A marcado: -3'); }
-
-    let score = scoreBase + scoreExtras;
-
-    // Normalização: garantir teto de 34 para manter a mesma escala utilizada no projeto/planilha
-    if(score > MAXIMO){ score = MAXIMO; debug.push(`Ajuste de teto aplicado: ${MAXIMO}`); }
-
-    // Render resultado
-    const resultArea = $('#resultArea');
-    const resultTitle = $('#resultTitle');
-    const resultText = $('#resultText');
-    const pct = Math.round((score / MAXIMO) * 100);
-
-    $('#scoreValue').text(score);
-    $('#scorePct').text(`(${pct}%)`);
-
-    // reset classes
-    resultTitle.removeClass('text-green-600 text-yellow-600 text-orange-600 text-red-600');
-
-    if(score <= 7){
-      resultTitle.text('Risco Variável').addClass('text-green-600');
-      resultText.html('Seu resultado indica <strong>risco variável</strong>. Permaneça vigilante e procure informações sobre seus direitos.');
-    } else if(score <= 13){
-      resultTitle.text('Risco Aumentado').addClass('text-yellow-600');
-      resultText.html('Há <strong>risco aumentado</strong>. Considere buscar apoio e orientação pelo <strong>180</strong>.');
-    } else if(score <= 17){
-      resultTitle.text('Risco Grave').addClass('text-orange-600');
-      resultText.html('<strong>Atenção!</strong> Indícios de <strong>risco grave</strong>. Procure ajuda especializada. Ligue <strong>180</strong> ou procure uma DEAM.');
-    } else {
-      resultTitle.text('Risco Extremo').addClass('text-red-600');
-      resultText.html('<strong>PERIGO!</strong> Indícios de <strong>risco extremo</strong>. Em emergência, ligue <strong>190</strong>; para orientação, <strong>180</strong>.');
-    }
-
-    // Caixa debug opcional
-    const dbg = document.getElementById('debugBox');
-    const dbgText = document.getElementById('debugText');
-    dbg.hidden = false;
-    dbgText.textContent = `Base = ${scoreBase}\nExtras = ${scoreExtras}\nTotal (ajustado ao teto 34) = ${score}`;
-
-    resultArea.removeClass('hidden');
-    window.scrollTo({top: resultArea[0].offsetTop - 100, behavior:'smooth'});
-  });
-  </script>
+    <!-- Footer -->
+    <footer>
+        <div class="container text-center">
+            <p>&copy; 2024 Vozes Femininas. Todos os direitos reservados.</p>
+            <div class="flex flex-center">
+                <a href="#">Facebook</a>
+                <a href="#">Instagram</a>
+                <a href="#">X (Twitter)</a>
+            </div>
+        </div>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
