--- a/ajuda.html
+++ b/ajuda.html
@@ -1,129 +1,120 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Como Procurar Ajuda - Vozes Femininas</title>
-    <!-- Adiciona a fonte Inter e o Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f7f7f7;
-            color: #333;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Como Procurar Ajuda - Vozes Femininas</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
-<body class="antialiased">
-    <!-- Header -->
-    <header class="bg-white shadow-sm p-4 md:p-6">
-        <div class="container mx-auto flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold text-[#8a2be2]">
-                <img src="https://placehold.co/200x50/8a2be2/ffffff?text=Vozes+Femininas" alt="Logo do projeto" class="h-10">
-            </a>
-            <nav class="hidden md:flex space-x-6">
-                <a href="index.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Home</a>
-                <a href="o_que_e.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">O que é?</a>
-                <a href="ajuda.html" class="text-[#8a2be2] font-semibold transition-colors">Ajuda</a>
-                <a href="leis.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Leis</a>
-                <a href="teste_de_risco.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Teste de Risco</a>
-                <a href="contato.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Contato</a>
-            </nav>
-            <button class="md:hidden text-gray-600 focus:outline-none">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-                </svg>
-            </button>
-        </div>
-    </header>
+<body>
+  <!-- Header -->
+  <header>
+    <div class="container header-content">
+      <a href="index.html" class="logo" aria-label="Página inicial Vozes Femininas">
+        <img src="https://placehold.co/200x50/8a2be2/ffffff?text=Vozes+Femininas" alt="Logo do projeto Vozes Femininas" />
+      </a>
+      <nav class="main-nav" aria-label="Principal">
+        <a href="index.html">Home</a>
+        <a href="o_que_e.html">O que é?</a>
+        <a href="ajuda.html" class="active">Ajuda</a>
+        <a href="leis.html">Leis</a>
+        <a href="teste_de_risco.html">Teste de Risco</a>
+        <a href="contato.html">Contato</a>
+      </nav>
+    </div>
+  </header>
 
-    <main>
-        <!-- Conteúdo da Página "Ajuda" -->
-        <section class="py-16 md:py-24 bg-white">
-            <div class="container mx-auto px-4 max-w-4xl">
-                <div class="text-center mb-12">
-                    <h1 class="text-4xl md:text-5xl font-extrabold text-[#4a248f] mb-4">
-                        Onde e Como Procurar Ajuda
-                    </h1>
-                    <p class="text-lg text-red-600 font-bold bg-red-100 border border-red-500 rounded-lg p-4 max-w-2xl mx-auto">
-                        Se você está em perigo imediato, não hesite. <br class="sm:hidden"> Ligue para a Polícia Militar no número <strong>190</strong>.
-                    </p>
-                </div>
+  <main>
+    <section class="help-page">
+      <div class="container container-narrow">
 
-                <div class="space-y-8">
-                    
-                    <!-- Card 1: Ligue 180 -->
-                    <div class="bg-[#f3e8ff] p-8 rounded-lg shadow-lg">
-                        <h2 class="text-3xl font-bold text-[#4a248f] mb-4">1. Ligue 180 - Central de Atendimento à Mulher</h2>
-                        <p class="text-lg text-gray-800 mb-4">
-                            O <strong>Ligue 180</strong> é o principal canal de atendimento para mulheres em situação de violência no Brasil.
-                        </p>
-                        <ul class="list-disc list-inside space-y-2 text-gray-700 text-lg">
-                            <li><strong>É gratuito e confidencial:</strong> A ligação pode ser feita de qualquer telefone, 24 horas por dia.</li>
-                            <li><strong>O que ele oferece:</strong> Escuta qualificada, orientação sobre seus direitos e encaminhamento de denúncias.</li>
-                            <li><strong>Não é apenas para denúncias:</strong> Você pode ligar para tirar dúvidas ou simplesmente desabafar.</li>
-                        </ul>
-                    </div>
+        <!-- Cabeçalho da página -->
+        <div class="help-header">
+          <h1 class="help-title">Onde e Como Procurar Ajuda</h1>
 
-                    <!-- Card 2: DEAMs -->
-                    <div class="bg-[#f3e8ff] p-8 rounded-lg shadow-lg">
-                        <h2 class="text-3xl font-bold text-[#4a248f] mb-4">2. Delegacias Especializadas de Atendimento à Mulher (DEAMs)</h2>
-                        <p class="text-lg text-gray-800 mb-4">
-                           As DEAMs são unidades da Polícia Civil com equipes especializadas para o atendimento de mulheres.
-                        </p>
-                         <ul class="list-disc list-inside space-y-2 text-gray-700 text-lg">
-                            <li><strong>O que fazer na DEAM:</strong> Você pode registrar um Boletim de Ocorrência (B.O.) e solicitar medidas protetivas de urgência.</li>
-                            <li><strong>Medidas Protetivas:</strong> São ordens judiciais para garantir sua segurança, como o afastamento do agressor do lar.</li>
-                             <li><strong>Onde encontrar:</strong> Procure online pela "DEAM" mais próxima. Em Brasília, por exemplo, existem a DEAM I (Asa Sul) e a DEAM II (Ceilândia).</li>
-                        </ul>
-                    </div>
-                    
-                    <!-- Card 3: Centros de Referência e Casas Abrigo -->
-                     <div class="bg-[#f3e8ff] p-8 rounded-lg shadow-lg">
-                        <h2 class="text-3xl font-bold text-[#4a248f] mb-4">3. Centros de Referência e Casas Abrigo</h2>
-                         <ul class="list-disc list-inside space-y-3 text-gray-700 text-lg">
-                            <li><strong>Centros de Referência da Mulher:</strong> Oferecem atendimento psicológico, social e jurídico para ajudar a mulher a sair do ciclo de violência.</li>
-                            <li><strong>Casas Abrigo:</strong> São locais seguros e sigilosos que oferecem moradia temporária para mulheres em risco de morte, com ou sem seus filhos.</li>
-                        </ul>
-                    </div>
-
-                    <!-- Card 4: Como Ajudar Alguém -->
-                    <div class="bg-[#f3e8ff] p-8 rounded-lg shadow-lg">
-                        <h2 class="text-3xl font-bold text-[#4a248f] mb-4">4. Como Ajudar Alguém</h2>
-                        <p class="text-lg text-gray-800 mb-4">
-                           Se você suspeita que uma amiga, familiar ou vizinha está sofrendo violência, você pode ajudar:
-                        </p>
-                         <ul class="list-disc list-inside space-y-2 text-gray-700 text-lg">
-                            <li><strong>Escute sem julgar:</strong> Ofereça um espaço seguro para que ela possa falar.</li>
-                            <li><strong>Informe-se:</strong> Mostre a ela os canais de ajuda como o Ligue 180 e este site.</li>
-                            <li><strong>Não a pressione:</strong> A decisão de denunciar é dela. Seu papel é apoiar.</li>
-                            <li><strong>Em caso de emergência:</strong> Se você ouvir uma briga com sinais de agressão, ligue para o 190. Sua ligação pode salvar uma vida.</li>
-                        </ul>
-                    </div>
-
-                    <!-- Card 5: Segurança Digital -->
-                    <div class="bg-yellow-100 border-l-4 border-yellow-500 text-yellow-700 p-6 rounded-lg shadow-lg">
-                        <h2 class="text-2xl font-bold mb-2">Importante: Sua Segurança Digital</h2>
-                        <p class="text-lg">
-                            Se você teme que seu agressor possa monitorar seu acesso à internet, lembre-se de <strong>limpar o histórico do seu navegador</strong> após visitar este site. Em muitos navegadores, você pode fazer isso apertando <strong>Ctrl + Shift + Del</strong>.
-                        </p>
-                    </div>
-                </div>
+          <!-- Alerta de emergência -->
+          <div class="alert alert--danger help-alert text-center">
+            <p><strong>Perigo imediato?</strong> Ligue para a Polícia Militar: <a href="tel:190" class="underline">190</a>.</p>
+            <p>Para orientação e denúncias, canal nacional: <a href="tel:180" class="underline">180</a>.</p>
+            <div class="phone-badges">
+              <span class="badge badge--danger">190</span>
+              <span class="badge badge--violet">180</span>
             </div>
-        </section>
-    </main>
-
-    <!-- Footer -->
-    <footer class="bg-[#4a248f] text-white py-8">
-        <div class="container mx-auto px-4 text-center">
-            <p>&copy; 2024 Vozes Femininas. Todos os direitos reservados.</p>
-            <div class="flex justify-center space-x-4 mt-4">
-                <a href="#" class="text-white hover:text-gray-300">Facebook</a>
-                <a href="#" class="text-white hover:text-gray-300">Instagram</a>
-                <a href="#" class="text-white hover:text-gray-300">X (Twitter)</a>
-            </div>
+          </div>
         </div>
-    </footer>
+
+        <!-- Conteúdo -->
+        <div class="help-grid">
+
+          <!-- Card 1 -->
+          <article class="help-card help-card--lilac">
+            <h2>1. Ligue 180 – Central de Atendimento à Mulher</h2>
+            <p>O <strong>Ligue 180</strong> é o principal canal de atendimento para mulheres em situação de violência no Brasil.</p>
+            <ul class="help-list">
+              <li>Atendimento 24 horas, gratuito e confidencial.</li>
+              <li>Orientação sobre direitos e encaminhamento a serviços de proteção.</li>
+              <li>Atuação em todo o território nacional.</li>
+            </ul>
+          </article>
+
+          <!-- Card 2 -->
+          <article class="help-card">
+            <h2>2. Delegacias e Serviços de Proteção</h2>
+            <p>Procure a <strong>Delegacia da Mulher (DEAM)</strong> mais próxima — ou qualquer delegacia — para registrar ocorrência e solicitar medidas protetivas.</p>
+            <ul class="help-list">
+              <li><strong>Casa da Mulher Brasileira</strong> (em capitais selecionadas) com atendimento integrado.</li>
+              <li><strong>Defensoria Pública</strong> e <strong>Ministério Público</strong> para orientação jurídica.</li>
+              <li><strong>CRAS/CREAS</strong> para acolhimento e assistência social.</li>
+            </ul>
+          </article>
+
+          <!-- Card 3 -->
+          <article class="help-card">
+            <h2>3. Canais Online e Aplicativos</h2>
+            <p>Em muitos estados, é possível registrar boletim de ocorrência online ou acionar a polícia por aplicativos oficiais.</p>
+            <ul class="help-list">
+              <li><strong>Disque 100</strong> para violações de direitos humanos.</li>
+              <li>Aplicativos das Polícias Civil/Militar do seu estado (quando disponíveis).</li>
+              <li>Ouvidorias e canais de denúncia eletrônica.</li>
+            </ul>
+          </article>
+
+          <!-- Card 4 -->
+          <article class="help-card help-card--lilac">
+            <h2>4. Como Ajudar Alguém</h2>
+            <p>Se você suspeita que uma amiga, familiar ou vizinha sofre violência, você pode:</p>
+            <ul class="help-list">
+              <li><strong>Escutar sem julgar</strong> e oferecer um espaço seguro.</li>
+              <li><strong>Informar</strong> sobre o 180, 190 e serviços de apoio.</li>
+              <li><strong>Não pressionar</strong> — a decisão de denunciar é dela; ofereça apoio.</li>
+              <li><strong>Emergência</strong>: ouviu agressão? Ligue <strong>190</strong>.</li>
+            </ul>
+          </article>
+
+          <!-- Callout de segurança digital -->
+          <div class="safety-callout">
+            <h3>Importante: sua segurança digital</h3>
+            <p>Se você teme monitoramento, use a janela anônima e <strong>limpe o histórico</strong> após a visita. Atalho: <strong>Ctrl + Shift + Del</strong> (ou equivalente no seu dispositivo).</p>
+          </div>
+
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container text-center">
+      <p>&copy; 2024 Vozes Femininas. Todos os direitos reservados.</p>
+      <div class="flex flex-center">
+        <a href="#">Facebook</a>
+        <a href="#">Instagram</a>
+        <a href="#">X (Twitter)</a>
+      </div>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
