--- a/contato.html
+++ b/contato.html
@@ -1,102 +1,97 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato - Vozes Femininas</title>
-    <!-- Adiciona a fonte Inter e o Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f7f7f7;
-            color: #333;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contato - Vozes Femininas</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="antialiased">
-    <!-- Header -->
-    <header class="bg-white shadow-sm p-4 md:p-6">
-        <div class="container mx-auto flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold text-[#8a2be2]">
-                <img src="https://placehold.co/200x50/8a2be2/ffffff?text=Vozes+Femininas" alt="Logo do projeto" class="h-10">
-            </a>
-            <nav class="hidden md:flex space-x-6">
-                <a href="index.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Home</a>
-                <a href="o_que_e.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">O que é?</a>
-                <a href="ajuda.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Ajuda</a>
-                <a href="leis.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Leis</a>
-                <a href="teste_de_risco.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Teste de Risco</a>
-                <a href="contato.html" class="text-[#8a2be2] font-semibold transition-colors">Contato</a>
-            </nav>
-            <button class="md:hidden text-gray-600 focus:outline-none">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-                </svg>
-            </button>
+<body>
+  <!-- Header -->
+  <header>
+    <div class="container header-content">
+      <a href="index.html" class="logo">
+        <img src="https://placehold.co/200x50/8a2be2/ffffff?text=Vozes+Femininas" alt="Logo do projeto">
+      </a>
+      <nav class="main-nav">
+  <a href="index.html" class="active">Home</a>
+  <a href="o_que_e.html">O que é?</a>
+  <a href="ajuda.html">Ajuda</a>
+  <a href="leis.html">Leis</a>
+  <a href="teste_de_risco.html">Teste de Risco</a>
+  <a href="contato.html">Contato</a>
+</nav>
+
+    </div>
+  </header>
+
+  <main>
+    <section class="page-section">
+      <div class="container container-narrow">
+
+        <!-- Aviso -->
+        <div class="alert alert--danger text-center">
+          <h1 class="alert-title">ATENÇÃO: CANAL NÃO EMERGENCIAL</h1>
+          <p>
+            Este formulário de contato é <strong>APENAS</strong> para dúvidas, sugestões ou parcerias sobre o projeto.
+            <strong>NÃO</strong> o utilize para denúncias ou pedidos de ajuda urgente.
+          </p>
+          <p class="mt-8">
+            Se você está em perigo, ligue para
+            <a href="tel:190" class="underline">190</a> (Polícia Militar) ou
+            <a href="tel:180" class="underline">180</a> (Central de Atendimento à Mulher).
+          </p>
         </div>
-    </header>
 
-    <main>
-        <!-- Conteúdo da Página "Contato" -->
-        <section class="py-16 md:py-24 bg-white">
-            <div class="container mx-auto px-4 max-w-4xl">
+        <!-- Formulário -->
+        <div class="card card--lilac">
+          <h2 class="card-title text-center">Fale Conosco</h2>
+          <p class="intro text-center">
+            Tem alguma dúvida sobre o projeto, uma sugestão para melhorá-lo ou interesse em uma parceria?
+            Preencha o formulário abaixo.
+          </p>
 
-                <!-- AVISO DE EMERGÊNCIA -->
-                <div class="bg-red-100 border-l-4 border-red-500 text-red-700 p-6 rounded-lg shadow-lg mb-12 text-center">
-                    <h1 class="text-3xl font-extrabold text-red-800 mb-2">ATENÇÃO: CANAL NÃO EMERGENCIAL</h1>
-                    <p class="text-lg">
-                        Este formulário de contato é <strong>APENAS</strong> para dúvidas, sugestões ou parcerias sobre o projeto. <strong>NÃO o utilize para denúncias ou pedidos de ajuda urgente.</strong>
-                    </p>
-                    <p class="mt-4 font-bold text-xl">
-                        Se você está em perigo, ligue para <a href="tel:190" class="underline">190</a> (Polícia Militar) ou <a href="tel:180" class="underline">180</a> (Central de Atendimento à Mulher).
-                    </p>
-                </div>
+          <form action="#" method="post" class="form">
+            <div class="form-grid">
+              <div class="form-field">
+                <label for="name">Seu Nome</label>
+                <input type="text" name="name" id="name" class="input" required>
+              </div>
 
-                <!-- Formulário de Contato sobre o Projeto -->
-                <div class="bg-[#f3e8ff] p-8 rounded-lg shadow-lg">
-                    <h2 class="text-3xl font-bold text-[#4a248f] text-center mb-2">Fale Conosco</h2>
-                    <p class="text-center text-lg text-gray-700 max-w-3xl mx-auto mb-8">
-                        Tem alguma dúvida sobre o projeto, uma sugestão para melhorá-lo ou interesse em uma parceria? Preencha o formulário abaixo.
-                    </p>
-                    <form action="#" method="POST">
-                        <div class="space-y-6">
-                            <div>
-                                <label for="name" class="block text-lg font-medium text-gray-800">Seu Nome</label>
-                                <input type="text" name="name" id="name" required class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-[#8a2be2] focus:border-[#8a2be2]">
-                            </div>
-                            <div>
-                                <label for="email" class="block text-lg font-medium text-gray-800">Seu E-mail</label>
-                                <input type="email" name="email" id="email" required class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-[#8a2be2] focus:border-[#8a2be2]">
-                            </div>
-                            <div>
-                                <label for="message" class="block text-lg font-medium text-gray-800">Sua Mensagem</label>
-                                <textarea id="message" name="message" rows="5" required class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-[#8a2be2] focus:border-[#8a2be2]"></textarea>
-                            </div>
-                        </div>
-                        <div class="text-center mt-8">
-                            <button type="submit" class="bg-[#4a248f] text-white font-semibold py-3 px-8 rounded-full shadow-lg hover:bg-[#321a64] transition-colors">
-                                Enviar Mensagem
-                            </button>
-                        </div>
-                    </form>
-                </div>
+              <div class="form-field">
+                <label for="email">Seu E-mail</label>
+                <input type="email" name="email" id="email" class="input" required>
+              </div>
 
+              <div class="form-field form-field--full">
+                <label for="message">Sua Mensagem</label>
+                <textarea id="message" name="message" rows="5" class="textarea" required></textarea>
+              </div>
             </div>
-        </section>
-    </main>
 
-    <!-- Footer -->
-    <footer class="bg-[#4a248f] text-white py-8">
-        <div class="container mx-auto px-4 text-center">
-            <p>&copy; 2024 Vozes Femininas. Todos os direitos reservados.</p>
-            <div class="flex justify-center space-x-4 mt-4">
-                <a href="#" class="text-white hover:text-gray-300">Facebook</a>
-                <a href="#" class="text-white hover:text-gray-300">Instagram</a>
-                <a href="#" class="text-white hover:text-gray-300">X (Twitter)</a>
+            <div class="form-actions text-center">
+              <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
             </div>
+          </form>
         </div>
-    </footer>
+
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container text-center">
+      <p>&copy; 2024 Vozes Femininas. Todos os direitos reservados.</p>
+      <div class="flex flex-center">
+        <a href="#">Facebook</a>
+        <a href="#">Instagram</a>
+        <a href="#">X (Twitter)</a>
+      </div>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
