--- a/leis.html
+++ b/leis.html
@@ -1,113 +1,120 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leis de Proteção - Vozes Femininas</title>
-    <!-- Adiciona a fonte Inter e o Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f7f7f7;
-            color: #333;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Leis de Proteção - Vozes Femininas</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="antialiased">
-    <!-- Header -->
-    <header class="bg-white shadow-sm p-4 md:p-6">
-        <div class="container mx-auto flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold text-[#8a2be2]">
-                <img src="https://placehold.co/200x50/8a2be2/ffffff?text=Vozes+Femininas" alt="Logo do projeto" class="h-10">
-            </a>
-            <nav class="hidden md:flex space-x-6">
-                <a href="index.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Home</a>
-                <a href="o_que_e.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">O que é?</a>
-                <a href="ajuda.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Ajuda</a>
-                <a href="leis.html" class="text-[#8a2be2] font-semibold transition-colors">Leis</a>
-                <a href="teste_de_risco.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Teste de Risco</a>
-                <a href="contato.html" class="text-gray-600 hover:text-[#8a2be2] transition-colors">Contato</a>
-            </nav>
-            <button class="md:hidden text-gray-600 focus:outline-none">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-                </svg>
-            </button>
-        </div>
-    </header>
+<body>
+  <!-- Header -->
+  <header>
+    <div class="container header-content">
+      <a href="index.html" class="logo">
+        <img src="https://placehold.co/200x50/8a2be2/ffffff?text=Vozes+Femininas" alt="Logo do projeto">
+      </a>
+<nav class="main-nav">
+  <a href="index.html" class="active">Home</a>
+  <a href="o_que_e.html">O que é?</a>
+  <a href="ajuda.html">Ajuda</a>
+  <a href="leis.html">Leis</a>
+  <a href="teste_de_risco.html">Teste de Risco</a>
+  <a href="contato.html">Contato</a>
+</nav>
 
-    <main>
-        <!-- Conteúdo da Página "Leis" -->
-        <section class="py-16 md:py-24 bg-white">
-            <div class="container mx-auto px-4 max-w-4xl">
-                <h1 class="text-4xl md:text-5xl font-extrabold text-[#4a248f] text-center mb-12">
-                    Conheça Seus Direitos
-                </h1>
-                <p class="text-center text-lg text-gray-700 max-w-3xl mx-auto mb-16">
-                    A legislação brasileira possui mecanismos importantes para a proteção da mulher. Conhecer as leis é o primeiro passo para garantir sua segurança e lutar por justiça.
-                </p>
+    </div>
+  </header>
 
-                <div class="space-y-12">
-                    
-                    <!-- Lei Maria da Penha -->
-                    <div class="bg-[#f3e8ff] p-8 rounded-lg shadow-lg">
-                        <h2 class="text-3xl font-bold text-[#4a248f] mb-4">Lei Maria da Penha (Lei nº 11.340/2006)</h2>
-                        <p class="text-lg text-gray-800 mb-4">
-                            Considerada um marco na luta contra a violência doméstica, a Lei Maria da Penha é a principal ferramenta de proteção para mulheres. Ela não trata apenas da agressão física, mas reconhece diversas formas de violência.
-                        </p>
-                        <div class="mt-6">
-                            <h3 class="font-semibold text-xl text-[#6b4c9e] mb-3">Tipos de Violência definidos pela Lei:</h3>
-                            <ul class="list-disc list-inside space-y-2 text-gray-700">
-                                <li><strong>Violência Física:</strong> Qualquer ato que prejudique a integridade ou a saúde corporal da mulher.</li>
-                                <li><strong>Violência Psicológica:</strong> Ações que causem dano emocional, diminuam a autoestima, controlem comportamentos, crenças e decisões.</li>
-                                <li><strong>Violência Sexual:</strong> Qualquer conduta que force a mulher a presenciar, manter ou participar de relação sexual não desejada.</li>
-                                <li><strong>Violência Patrimonial:</strong> Atos que envolvam a destruição de bens, documentos, recursos econômicos ou instrumentos de trabalho.</li>
-                                <li><strong>Violência Moral:</strong> Ações como caluniar, difamar ou injuriar a mulher.</li>
-                            </ul>
-                        </div>
-                    </div>
+  <main>
+    <section class="laws-page">
+      <div class="container container-narrow">
+        <h1 class="laws-title">Conheça Seus Direitos</h1>
+        <p class="laws-intro">
+          A legislação brasileira possui mecanismos importantes para a proteção da mulher. Conhecer as leis é o primeiro passo para garantir sua segurança e lutar por justiça.
+        </p>
 
-                    <!-- Lei do Feminicídio -->
-                    <div class="bg-[#f3e8ff] p-8 rounded-lg shadow-lg">
-                        <h2 class="text-3xl font-bold text-[#4a248f] mb-4">Lei do Feminicídio (Lei nº 13.104/2015)</h2>
-                        <p class="text-lg text-gray-800">
-                            Esta lei alterou o Código Penal para incluir o feminicídio como uma qualificadora do crime de homicídio. Isso significa que, quando uma mulher é assassinada por razões de sua condição de gênero, o crime é considerado hediondo, com penas mais severas.
-                        </p>
-                        <div class="mt-6 bg-white/50 p-4 rounded-md">
-                             <h3 class="font-semibold text-xl text-[#6b4c9e] mb-2">O que caracteriza o feminicídio?</h3>
-                             <p class="text-gray-700">O feminicídio é o assassinato de mulheres cometido em razão do gênero, ou seja, quando a morte ocorre devido ao fato da vítima ser mulher. É caracterizado como um homicídio qualificado, com pena de reclusão de 12 a 30 anos, e é considerado crime hediondo.</p>
-                        </div>
-                    </div>
+        <div class="laws-grid">
 
-                     <!-- Outras Leis Importantes -->
-                    <div class="bg-[#f3e8ff] p-8 rounded-lg shadow-lg">
-                        <h2 class="text-3xl font-bold text-[#4a248f] mb-4">Outras Leis e Medidas de Proteção</h2>
-                        <p class="text-lg text-gray-800 mb-4">
-                            Além das duas principais leis, outras legislações complementam a rede de proteção à mulher:
-                        </p>
-                         <ul class="list-disc list-inside space-y-3 text-gray-700">
-                                <li><strong>Lei do Minuto Seguinte (Lei nº 12.845/2013):</strong> Garante que vítimas de violência sexual recebam atendimento emergencial, integral e gratuito no SUS, incluindo a profilaxia de gravidez e de doenças sexualmente transmissíveis.</li>
-                                <li><strong>Medidas Protetivas de Urgência:</strong> Previstas na Lei Maria da Penha, são ordens judiciais para proteger a mulher em situação de risco, como o afastamento do agressor do lar e a proibição de contato.</li>
-                            </ul>
-                    </div>
+          <!-- Lei Maria da Penha -->
+          <article class="card card--lilac law-card">
+            <h2 class="law-heading">Lei Maria da Penha (Lei nº 11.340/2006)</h2>
+            <p>
+              Considerada um marco na luta contra a violência doméstica, a Lei Maria da Penha é a principal ferramenta de proteção para mulheres. Ela não trata apenas da agressão física, mas reconhece diversas formas de violência.
+            </p>
 
-                </div>
+            <div class="law-subblock">
+              <h3 class="law-subtitle">Tipos de violência definidos pela Lei:</h3>
+              <ul class="law-list">
+                <li><strong>Física:</strong> ofensa à integridade ou saúde corporal.</li>
+                <li><strong>Psicológica:</strong> ameaça, humilhação, manipulação, isolamento, perseguição, chantagem etc.</li>
+                <li><strong>Sexual:</strong> relações forçadas, impedir uso de métodos contraceptivos, forçar casamento/gravidez.</li>
+                <li><strong>Patrimonial:</strong> subtração, retenção, destruição de bens, documentos, instrumentos de trabalho.</li>
+                <li><strong>Moral:</strong> calúnia, difamação e injúria.</li>
+              </ul>
             </div>
-        </section>
-    </main>
 
-    <!-- Footer -->
-    <footer class="bg-[#4a248f] text-white py-8">
-        <div class="container mx-auto px-4 text-center">
-            <p>&copy; 2024 Vozes Femininas. Todos os direitos reservados.</p>
-            <div class="flex justify-center space-x-4 mt-4">
-                <a href="#" class="text-white hover:text-gray-300">Facebook</a>
-                <a href="#" class="text-white hover:text-gray-300">Instagram</a>
-                <a href="#" class="text-white hover:text-gray-300">X (Twitter)</a>
+            <div class="law-subblock">
+              <h3 class="law-subtitle">Medidas protetivas de urgência:</h3>
+              <ul class="law-list">
+                <li>Afastamento imediato do agressor do lar.</li>
+                <li>Proibição de contato e aproximação.</li>
+                <li>Suspensão do porte de armas.</li>
+                <li>Proteção patrimonial e guarda de filhos, entre outras.</li>
+              </ul>
             </div>
+          </article>
+
+          <!-- Lei do Feminicídio -->
+          <article class="card law-card">
+            <h2 class="law-heading">Lei do Feminicídio (Lei nº 13.104/2015)</h2>
+            <p>
+              Esta lei alterou o Código Penal para incluir o feminicídio como qualificadora do homicídio. Quando uma mulher é assassinada por razões de sua condição de gênero, o crime é considerado hediondo e recebe penas mais severas.
+            </p>
+
+            <div class="law-subpanel">
+              <h3 class="law-subtitle">O que caracteriza o feminicídio?</h3>
+              <p class="law-text">
+                É o assassinato de mulheres cometido em razão do gênero, isto é, quando a morte ocorre por discriminação ou violência de gênero (no contexto de violência doméstica e familiar, menosprezo ou discriminação à condição de mulher). A pena é de <strong>12 a 30 anos</strong> de reclusão, com agravantes em situações como gestação, presença de descendentes, entre outras previstas em lei.
+              </p>
+            </div>
+          </article>
+
+          <!-- Outras Leis -->
+          <article class="card card--lilac law-card">
+            <h2 class="law-heading">Outras Leis e Medidas de Proteção</h2>
+            <p>
+              Além das duas principais leis, outras normas complementam a rede de proteção à mulher:
+            </p>
+            <ul class="law-list">
+              <li>
+                <strong>Lei do Minuto Seguinte (Lei nº 12.845/2013):</strong>
+                garante atendimento emergencial, integral e gratuito no SUS às vítimas de violência sexual, incluindo profilaxia de gravidez e ISTs.
+              </li>
+              <li>
+                <strong>Medidas Protetivas de Urgência:</strong>
+                previstas na Lei Maria da Penha; são ordens judiciais para proteger a mulher (afastamento do agressor, proibição de contato, entre outras).
+              </li>
+            </ul>
+          </article>
+
         </div>
-    </footer>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container text-center">
+      <p>&copy; 2024 Vozes Femininas. Todos os direitos reservados.</p>
+      <div class="flex flex-center">
+        <a href="#">Facebook</a>
+        <a href="#">Instagram</a>
+        <a href="#">X (Twitter)</a>
+      </div>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
