Update page title and improve statistics source reference; refine CSS styles for better layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fim da Violência Contra a Mulher - Home</title>
+  <title>Vozes Femininas</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -55,7 +55,7 @@
           <p class="stat-text">
             Crimes de feminicídios CONSUMADOS E TENTADOS foram registrados em 2024 no Brasil.
           </p>
-          <small class="stat-source">(Fonte: Fórum Brasileiro de Segurança Pública)</small>
+          <small class="stat-source">(Fonte: Monitor de Feminicídios no Brasil (MFB) – LESFEM/UEL, 2024)</small>
         </article>
 
         <article class="stat-card">
@@ -261,7 +261,6 @@
             <option value="to">Tocantins</option>
           </select>
 
-          <!-- Boxes (mostra/oculta via .active) -->
           <div id="box_mg" data-info="mg" class="estado active">
             <h3>Minas Gerais</h3>
             <ul><li>Minas Gerais - 366 feminicídios</li></ul>
@@ -374,7 +373,6 @@
       </div>
     </div>
 
-    <!-- Seção de destaques (substitui utilitários do Tailwind por classes próprias) -->
     <section class="features">
       <div class="container">
         <h2 class="section-title">Informação, apoio e direitos</h2>
@@ -387,7 +385,7 @@
           </article>
 
           <article class="feature-card">
-            <div class="icon-circle" aria-hidden="true">🛟</div>
+            <div class="icon-circle" aria-hidden="true">❔</div>
             <h3>Como buscar ajuda?</h3>
             <p>Canais de denúncia, redes de apoio e abrigos seguros.</p>
             <a class="link" href="ajuda.html">Encontre ajuda →</a>
